--- a/reddit-api/src/app/components/landing/landing.component.html
+++ b/reddit-api/src/app/components/landing/landing.component.html
@@ -1,3 +1,9 @@
-<p>
-  landing works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-4">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3 (wider)
+    </div>
+</div>
