--- a/reddit-api/src/app/components/post-row/post-row.component.html
+++ b/reddit-api/src/app/components/post-row/post-row.component.html
@@ -1,3 +1,11 @@
-<p>
-  post-row works!
-</p>
+
+<div (click)="post.open()" *ngIf="post.visible">
+    <p *ngIf="post.unreadStatus"><strong>unread</strong></p>
+    <p>{{post.title}}</p>
+    <p>{{post.author}}</p>
+    <p>{{post.entryDate}}</p>
+    <p><img [src]="post.thumbnail" [alt]="post.title"></p>
+    <p>Comments: {{post.numberOfComment}}</p>    
+    <button (click)="post.dismiss()">Dismiss</button>
+    <hr>
+</div>
