--- a/reddit-api/src/app/components/post-row/post-row.component.html
+++ b/reddit-api/src/app/components/post-row/post-row.component.html
@@ -3,7 +3,7 @@
     <p *ngIf="post.unreadStatus"><strong>unread</strong></p>
     <p>{{post.title}}</p>
     <p>{{post.author}}</p>
-    <p>{{post.entryDate}}</p>
+    <p>{{post.entryDate | dateFormatter}}</p>
     <p><img [src]="post.thumbnail" [alt]="post.title"></p>
     <p>Comments: {{post.numberOfComment}}</p>    
     <button (click)="post.dismiss()">Dismiss</button>
