--- a/reddit-api/src/app/components/left-bar/left-bar.component.html
+++ b/reddit-api/src/app/components/left-bar/left-bar.component.html
@@ -1,1 +1,1 @@
-<app-post-row *ngFor="let post of posts" [post]="post"></app-post-row>
+<app-post-row *ngFor="let post of posts" [post]="post" (click)="openInDetail(post)"></app-post-row>
