--- a/reddit-api/src/app/components/post-row/post-row.component.html
+++ b/reddit-api/src/app/components/post-row/post-row.component.html
@@ -1,4 +1,4 @@
-<div (click)="openInDetail()" *ngIf="post.visible">
+<div *ngIf="post.visible">
     <p *ngIf="post.unreadStatus"><strong>unread</strong></p>
     <p>{{post.title}}</p>
     <p>{{post.author}}</p>
