--- a/reddit-api/src/app/components/landing/landing.component.html
+++ b/reddit-api/src/app/components/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div class="container" *ngIf="loaded">
   <div class="row">
     <div class="col-4">
-      <app-left-bar [posts]="postList.posts" (open)="openInDetail($event)"></app-left-bar>
+      <app-left-bar [posts]="postList.posts" (open)="openInDetail($event)" (dismiss)="dismissAll()"></app-left-bar>
     </div>
     <div class="col">
       <app-right-section *ngIf="postDetailed" [post]="postDetailed"></app-right-section>
