--- a/reddit-api/src/app/components/right-section/right-section.component.html
+++ b/reddit-api/src/app/components/right-section/right-section.component.html
@@ -1,3 +1,3 @@
-<p>
-  {{post.title}}
-</p>
+<p>{{post.author}}</p>
+<img *ngIf="post.thumbnail_height" [src]="post.thumbnail" [alt]="post.title">
+<p>{{post.title}}</p>
