--- a/reddit-api/src/app/components/left-bar/left-bar.component.html
+++ b/reddit-api/src/app/components/left-bar/left-bar.component.html
@@ -1,4 +1,6 @@
-<app-post-row *ngFor="let post of posts" [post]="post" (click)="openInDetail(post)"></app-post-row>
+<app-pagination [datasetLength]="posts.length" [pageSize]="pageSize" (changePage)="changePage($event)"></app-pagination>
+<app-post-row *ngFor="let post of posts | slice: (page-1) * pageSize : (page-1) * pageSize + pageSize" [post]="post"
+    (click)="openInDetail(post)"></app-post-row>
 <div id="dismissAll">
     <button (click)="dismissAll()">Dismiss all</button>
 </div>
