--- a/reddit-api/src/app/components/left-bar/left-bar.component.html
+++ b/reddit-api/src/app/components/left-bar/left-bar.component.html
@@ -1,6 +1,12 @@
-<app-pagination [datasetLength]="posts.length" [pageSize]="pageSize" (changePage)="changePage($event)"></app-pagination>
-<app-post-row *ngFor="let post of posts | slice: (page-1) * pageSize : (page-1) * pageSize + pageSize" [post]="post"
-    (click)="openInDetail(post)"></app-post-row>
-<div id="dismissAll">
-    <button (click)="dismissAll()">Dismiss all</button>
-</div>
+<section>
+    <header>
+        <app-pagination [datasetLength]="posts.length" [pageSize]="pageSize" (changePage)="changePage($event)"></app-pagination>
+        <div class="dismissButton">
+            <button (click)="dismissAll()">Dismiss all</button>
+        </div>
+    </header>
+    <main>
+        <app-post-row *ngFor="let post of posts | slice: (page-1) * pageSize : (page-1) * pageSize + pageSize" [post]="post"
+            (click)="openInDetail(post)"></app-post-row>
+    </main>
+</section>
