--- a/reddit-api/src/app/components/post-row/post-row.component.html
+++ b/reddit-api/src/app/components/post-row/post-row.component.html
@@ -1,10 +1,15 @@
 <div *ngIf="post.visible">
-    <p *ngIf="post.unreadStatus"><strong>unread</strong></p>
-    <p>{{post.title}}</p>
-    <p>{{post.author}}</p>
-    <p>{{post.entryDate | dateFormatter}}</p>
-    <img *ngIf="post.thumbnail_height" [src]="post.thumbnail" [alt]="post.title">
-    <p>Comments: {{post.numberOfComment}}</p>    
-    <button (click)="post.dismiss()">Dismiss</button>
-    <hr>
+    <p *ngIf="post.unreadStatus"><strong>Not read yet!</strong></p>
+    <header>
+        <p class="author">User: <strong>{{post.author}}</strong></p>
+        <p class="date">{{post.entryDate | dateFormatter}}</p>
+    </header>
+    <main>
+        <img *ngIf="post.thumbnail_height" [src]="post.thumbnail" [alt]="post.title">
+        <p>{{post.title}}</p>
+    </main>
+    <footer>
+        <p>Comments: {{post.numberOfComment}}</p>    
+        <button (click)="post.dismiss()">Dismiss</button>
+    </footer>
 </div>
