--- a/reddit-api/src/styles.less
+++ b/reddit-api/src/styles.less
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "./styles/variables.less";
+
+body {
+    background: @light-grey;
+
+    .container{
+        max-width: none;
+    }
+}
